--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pip install flask
-pip instal pymsql
+pip instal mysql-connector-python
 pip install Brcypt
 pip install flask_bcrypt
 pip install flask_mail
+ 
